--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
     font-family: Arial, sans-serif;
-    background-image: linear-gradient( 44.8deg,  rgba(255,136,102,0.67) -53.1%, rgba(255,221,136,0.28) 49% );
+    background-image: linear-gradient(44.8deg, rgba(255, 136, 102, 0.67) -53.1%, rgba(255, 221, 136, 0.28) 49%);
     text-align: center;
     margin: 0;
     padding: 0;
@@ -86,3 +86,16 @@ button {
     color: red;
     margin-top: 10px;
 }
+
+/* Media Queries for Smartphone */
+@media (max-width: 600px) {
+    .container {
+        margin: 50px auto;
+        padding: 10px;
+    }
+
+    .weather h2 {
+        font-size: 40px;
+    }
+}
+
